pcp (3.8.3) unstable; urgency=low

  * New release (full details in CHANGELOG).
  * Resolve FTBFS for kfreebsd errno (closes: 721499)
  * Resolve FTBFS on s390x via -fPIC (closes: 721500)

 -- Nathan Scott <nathans@debian.org>  Fri, 06 Sep 2013 08:30:44 +1000

pcp (3.8.2) unstable; urgency=low

  * New release (full details in CHANGELOG).
  * Fix library symlink in libpcp-gui2-dev (closes: #715100)
  * Fix library symlink in libpcp-import1-dev (closes: #715101)
  * Fix library symlink in libpcp-mmv1-dev (closes: #715102)
  * Fix library symlink in libpcp-pmda3-dev (closes: #715103)
  * Fix library symlink in libpcp-trace2-dev (closes: #715104)

 -- Nathan Scott <nathans@debian.org>  Wed, 31 Jul 2013 08:12:02 +1000

pcp (3.8.1) unstable; urgency=low

  * New release (full details in CHANGELOG).
  * Introduces a collectl2pcp format-converter package.
  * Remove a second 'restrict' keyword use (closes: #689552)

 -- Nathan Scott <nathans@debian.org>  Wed, 19 Jun 2013 09:33:00 +1000

pcp (3.8.0) unstable; urgency=low

  * New release (full details in CHANGELOG).
  * Introduces SASL2 dependency in core PCP library.
  * Ensure install.log turds not left behind (closes: #705994)

 -- Nathan Scott <nathans@debian.org>  Tue, 14 May 2013 08:29:36 +1000

pcp (3.7.2) unstable; urgency=low

  * Add build dependency on python-all-dev (closes: #704717)
  * New release (full details in CHANGELOG).

 -- Nathan Scott <nathans@debian.org>  Fri, 19 Apr 2013 09:24:10 +1000

pcp (3.7.1) unstable; urgency=low

  * New release (full details in CHANGELOG).

 -- Nathan Scott <nathans@debian.org>  Wed, 20 Mar 2013 09:01:30 +1100

pcp (3.7.0) unstable; urgency=low

  * New release (full details in CHANGELOG).
  * Resolve issues in python sub-package creation.
  * Introduces NSS dependency in core PCP library.

 -- Nathan Scott <nathans@debian.org>  Mon, 11 Mar 2013 11:03:56 +1100

pcp (3.6.10) unstable; urgency=low

  * New release (full details in CHANGELOG).