@@ -1,5 +1,6 @@
 #!/bin/sh
 #
+# Copyright (c) 2013 Red Hat.
 # Copyright (c) 2004 Silicon Graphics, Inc.  All Rights Reserved.
 # 
 # This program is free software; you can redistribute it and/or modify it
@@ -12,10 +13,6 @@
 # or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
 # for more details.
 # 
-# You should have received a copy of the GNU General Public License along
-# with this program; if not, write to the Free Software Foundation, Inc.,
-# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
-#
 # This script emulates bsd install and also recognises
 # two environment variables, with the following semanitcs :-
 #
@@ -119,6 +116,7 @@ fi
 
 
 test $REAL_UID -ne 0 && CHOWN=true
+test "$NO_CHOWN" = "true" && CHOWN=true
 
 while getopts "d:g:m:o:S:" c $*
 do
