@@ -3,8 +3,9 @@ pcp (3.8.3) unstable; urgency=low
   * New release (full details in CHANGELOG).
   * Resolve FTBFS for kfreebsd errno (closes: 721499)
   * Resolve FTBFS on s390x via -fPIC (closes: 721500)
+  * Tackle a buildd issue with chown (closes: 719734)
 
- -- Nathan Scott <nathans@debian.org>  Fri, 06 Sep 2013 08:30:44 +1000
+ -- Nathan Scott <nathans@debian.org>  Sun, 08 Sep 2013 18:18:02 +1000
 
 pcp (3.8.2) unstable; urgency=low
 
